# DynGen

./: CMakeLists.txt  testsuite.scd
src/: dyngen.h  eel2_adapter.cpp  eel2_adapter.h  math_utils.h
src/HelpSource/Classes/: DynGen.schelp
tests/: CMakeLists.txt  trig_math_test.cpp  window_test.cpp
